Portfolio/Bio.html

--- a/Portfolio/Homepage.html
+++ b/Portfolio/Homepage.html
@@ -10,7 +10,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Portfolio</title>
-	<img src="/images/kaithunberg.png" alt="Kai Thunberg" width="360" height="480">
+	<img src="Portfolio/images/kaithunberg.jpg" alt="Kai Thunberg" height="480" width="360">
 
 </head>
 
@@ -24,12 +24,12 @@
 		<h2> Simple Solutions for Simple Web Sites </h2>
 
     <!-- Navigation Section -->
-    <!-- Provides for fast navigation throughtout the website -->
+    <!-- Provides for fast navigation throughout the website -->
     
     	<nav>
         	<ul>
            	 <li><a href="Bio.asp">Bio</a></li>
-            	<li><a href="Scholastic Achievements.asp">Scholastic Achievments</a></li>
+            	<li><a href="Scholastic Achievements.asp">Scholastic Achievements</a></li>
            	 <li><a href="Career Goals.asp">Career Goals</a></li>
             	<li><a href="Interests.asp">Interests</a></li>
             	<li><a href="Contact.asp">Contact</a></li>
@@ -50,6 +50,8 @@
         
 	        <p><strong> $ymbol </strong></p>
 		</main>
-  
+		<footer>
+			<p>©2023 MyWebsite.   All rights reserved.  <br>  Contact Email: <a href="mailto:ke.thunberg@pack.csupueblo.edu">ke.thunberg@pack.csupueblo.edu</a></p>	
+		</footer>
 </body>
 </html>
