--- a/Portfolio/Contact.html
+++ b/Portfolio/Contact.html
@@ -41,7 +41,7 @@
 					<li>Name: Kai Thunberg</li>
 					<li>Email Address: <a href="mailto:ke.thunberg@pack.csupueblo.edu">ke.thunberg@pack.csupueblo.edu</a></li>
 					<li>Phone Number: (909)234-8732</li>
-					<li>			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3130.855515648578!2d-104.579911!3d38.3060152!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8713a3ee3c23cbc9%3A0xdf2327b69b74e025!2sColorado%20State%20University-Pueblo%2C%202200%20Bonforte%20Blvd%2C%20Pueblo%2C%20CO%2081001!5e0!3m2!1sen!2sus!4v1700005143574!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+					<li><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3130.855515648578!2d-104.579911!3d38.3060152!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8713a3ee3c23cbc9%3A0xdf2327b69b74e025!2sColorado%20State%20University-Pueblo%2C%202200%20Bonforte%20Blvd%2C%20Pueblo%2C%20CO%2081001!5e0!3m2!1sen!2sus!4v1700005143574!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 					</li>
 				</u1>
 			
@@ -50,7 +50,7 @@
 	<footer>
 		<!----Add a Copyright symbol showing ownership as well as a contact email-->
 		<center>
-			<p>©2023 My Awesome Website.  All rights reserved.  <br>  Contact us at Email: <a href="mailto:ke.thunberg@pack.csupueblo.edu">ke.thunberg@pack.csupueblo.edu</a></p>
+			<p>©2023 MyWebsite.  All rights reserved.  <br>  Contact Email: <a href="mailto:ke.thunberg@pack.csupueblo.edu">ke.thunberg@pack.csupueblo.edu</a></p>
 		</center>	
 	</footer>
 	</body>
