updating to github

--- a/Portfolio/Homepage.html
+++ b/Portfolio/Homepage.html
@@ -10,7 +10,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Portfolio</title>
-	<img src="Portfolio/images/kaithunberg.jpg" alt="Kai Thunberg" height="480" width="360">
+	<img src="images/kaithunberg.jpg" alt="Kai Thunberg" height="480" width="360">
 
 </head>
 
