--- a/Portfolio/Homepage.html
+++ b/Portfolio/Homepage.html
@@ -11,7 +11,7 @@
 	<meta charset="utf-8">
 	<title>Portfolio</title>
 	<img src="images/kaithunberg.jpg" alt="Kai Thunberg" height="480" width="360">
-
+	<link rel="stylesheet" href="css/stylesheet.css">
 </head>
 
 <body>
@@ -46,9 +46,6 @@
                                                                                                                         	<p>
             		<b> Cheers,</b><br>
 			<i> -Kai </i>
-         	</p>
-        
-	        <p><strong> $ymbol </strong></p>
 		</main>
 		<footer>
 			<p>©2023 MyWebsite.   All rights reserved.  <br>  Contact Email: <a href="mailto:ke.thunberg@pack.csupueblo.edu">ke.thunberg@pack.csupueblo.edu</a></p>	
