Update before test

--- a/Portfolio/Homepage.html
+++ b/Portfolio/Homepage.html
@@ -9,6 +9,7 @@
 
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Portfolio</title>
 	<link rel="stylesheet" href="css/stylesheet.css">
 </head>
@@ -18,11 +19,13 @@
 	
     <!-- Header Section -->
     <!-- Introduce the Viewer to the subject of the website -->
-		
+		<div class="primary-content">
+	 <!-- Essential content for mobile viewport -->		
 		<h1> Kai Thunberg	</h1>
 		<h2> Simple Solutions for Simple Web Sites </h2>
 		<img src="images/kaithunberg.jpg" alt="Kai Thunberg" height="480" width="360">
-    <!-- Navigation Section -->
+		</div>
+	<!-- Navigation Section -->
     <!-- Provides for fast navigation throughout the website -->
     
     	<nav>
@@ -38,13 +41,17 @@
     <!-- Give a brief introduction for the website -->
 	
     	<main>
-        	<p>
+        	<div class="secondary-content">
+	<!-- Additional content or less essential content -->
+			<p>
         		Welcome and Thank You for visiting my Portfolio!<br>
         		Please feel free to explore and learn more about me and my professional aspirations.
             																											</p>
                                                                                                                         	<p>
             		<b> Cheers,</b><br>
 			<i> -Kai </i>
+			</p>
+			</div>																													
 		</main>
 		<footer>
 			<p>©2023 MyWebsite.   All rights reserved.  <br>  Contact Email: <a href="mailto:ke.thunberg@pack.csupueblo.edu">ke.thunberg@pack.csupueblo.edu</a></p>	
