--- a/Portfolio/Contact.html
+++ b/Portfolio/Contact.html
@@ -9,6 +9,7 @@
 
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Contact Page</title>
 	<link rel="stylesheet" href="css/stylesheet.css">
 	<style>
@@ -24,6 +25,7 @@
     <!-- Header Section -->
     <!-- Introduce the Viewer to the subject of the website -->
 		
+
 		<h1> Kai Thunberg	</h1>
 		<h2> Simple Solutions for Simple Web Sites </h2>
 		
@@ -50,7 +52,10 @@
 			</u1>
 			</div>
     	<main>
+			<div class="primary-content">
+	<!-- Essential content for mobile viewport -->
 			<p>	<u1>
+					<h1>Contact Info</h1>
 					<li>Name: Kai Thunberg</li>
 					<li>Email Address: <a href="mailto:ke.thunberg@pack.csupueblo.edu">ke.thunberg@pack.csupueblo.edu</a></li>
 					<li>Phone Number: (909)234-8732</li>
@@ -59,9 +64,16 @@
 				</u1>
 			
 			</p>
+
+			<div class="secondary-content">
+	<!-- Additional content or less essential content -->
+
+			<p> 
+				<h3>Please feel free to reach out to me with any questions or inquiries. Thank you.</h3>
+			</p>
 		</main>
 	<footer>
-		<!----Add a Copyright symbol showing ownership as well as a contact email-->
+	<!--Add a Copyright symbol showing ownership as well as a contact email-->
 		<center>
 			<p>©2023 MyWebsite.  All rights reserved.  <br>  Contact Email: <a href="mailto:ke.thunberg@pack.csupueblo.edu">ke.thunberg@pack.csupueblo.edu</a></p>
 		</center>	
