--- a/Portfolio/Contact.html
+++ b/Portfolio/Contact.html
@@ -71,6 +71,7 @@
 			<p> 
 				<h3>Please feel free to reach out to me with any questions or inquiries. Thank you.</h3>
 			</p>
+			</div>
 		</main>
 	<footer>
 	<!--Add a Copyright symbol showing ownership as well as a contact email-->
