--- a/Portfolio/Contact.html
+++ b/Portfolio/Contact.html
@@ -64,7 +64,7 @@
 				</u1>
 			
 			</p>
-
+			</div>
 			<div class="secondary-content">
 	<!-- Additional content or less essential content -->
 
