--- a/Portfolio/Homepage.html
+++ b/Portfolio/Homepage.html
@@ -11,7 +11,13 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Portfolio</title>
+<!-- Link to the Google Font -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap">
 	<link rel="stylesheet" href="css/stylesheet.css">
+	<link rel="stylesheet" href="css/mobiledevice-stylesheet.css">
+
+
+
 </head>
 
 <body>
