--- a/Portfolio/Homepage.html
+++ b/Portfolio/Homepage.html
@@ -15,8 +15,12 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap">
 	<link rel="stylesheet" href="css/stylesheet.css">
 	<link rel="stylesheet" href="css/mobiledevice-stylesheet.css">
-
-
+<!--Apply font to Heading-->
+	<style>
+		h1, h2 {
+			font-family: 'Open Sans', sans-serif;
+	}
+	</style>
 
 </head>
 
