--- a/Portfolio/Homepage.html
+++ b/Portfolio/Homepage.html
@@ -1,93 +1,94 @@
 <!DOCTYPE html>
-<!-- 
-	Created by: Kai Thunberg
-	File Name: Personal Portfolio
-	Date: October 19, 2023
+<!--
+    Created by: Kai Thunberg
+    File Name: Personal Portfolio
+    Date: October 19, 2023
 -->
 
 <html lang="en">
 
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Portfolio</title>
-	<!-- Link to the Google Font -->
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap">
-	<link rel="stylesheet" href="css/stylesheet.css">
-	<link rel="stylesheet" href="css/mobiledevice-stylesheet.css">
-	<!-- Apply font to Heading and Figure elements -->
-	<style>
-		body, h1, h2, p, ul, li, figure, figcaption {
-			margin: 0;
-			padding: 0;
-			border: 0;
-		}
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio</title>
+    <!-- Link to the Google Font -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap">
+    <link rel="stylesheet" href="css/stylesheet.css">
+    <link rel="stylesheet" href="css/mobiledevice-stylesheet.css">
+    <!-- Apply font to Heading and Figure elements -->
+    <style>
+        /* Reset styles for common elements */
+        body, h1, h2, p, ul, li, figure, figcaption {
+            margin: 0;
+            padding: 0;
+            border: 0;
+        }
 
-		body {
-			font-family: 'Open Sans', sans-serif;
-			line-height: 1.6;
-		}
+        body {
+            font-family: 'Open Sans', sans-serif;
+            line-height: 1.6;
+        }
 
-		/* Additional styles for figure and figcaption */
-		figure {
-			margin: 0;
-		}
+        /* Additional styles for figure and figcaption */
+        figure {
+            margin: 0;
+        }
 
-		figcaption {
-			font-size: 1rem;
-			text-align: center;
-			margin-top: 0.5rem;
-		}
-	</style>
+        figcaption {
+            font-size: 1rem;
+            text-align: center;
+            margin-top: 0.5rem;
+        }
+    </style>
 </head>
 
 <body>
 
-	<!-- Header Section -->
-	<!-- Introduce the Viewer to the subject of the website -->
-	<header>
-		<div class="primary-content">
-			<!-- Essential content for mobile viewport -->
-			<h1> Kai Thunberg </h1>
-			<h2> Simple Solutions for Simple Web Sites </h2>
-			<figure>
-				<img src="images/kaithunberg.jpg" alt="Kai Thunberg" height="480" width="360">
-				<figcaption>Making the web simpler, one site at a time.</figcaption>
-			</figure>
-		</div>
-	</header>
+    <!-- Header Section -->
+    <!-- Introduce the Viewer to the subject of the website -->
+    <header>
+        <div class="primary-content">
+            <!-- Essential content for mobile viewport -->
+            <h1>Kai Thunberg</h1>
+            <h2>Simple Solutions for Simple Web Sites</h2>
+            <figure>
+                <img src="images/kaithunberg.jpg" alt="Kai Thunberg" height="480" width="360">
+                <figcaption>Making the web simpler, one site at a time.</figcaption>
+            </figure>
+        </div>
+    </header>
 
-	<!-- Navigation Section -->
-	<!-- Provides for fast navigation throughout the website -->
-	<nav>
-		<ul>
-			<li><a href="Bio.asp">Bio</a></li>
-			<li><a href="Scholastic Achievements.asp">Scholastic Achievements</a></li>
-			<li><a href="Career Goals.asp">Career Goals</a></li>
-			<li><a href="Interests.asp">Interests</a></li>
-			<li><a href="Contact.asp">Contact</a></li>
-		</ul>
-	</nav>
+    <!-- Navigation Section -->
+    <!-- Provides for fast navigation throughout the website -->
+    <nav>
+        <ul>
+            <li><a href="Bio.asp">Bio</a></li>
+            <li><a href="Scholastic Achievements.asp">Scholastic Achievements</a></li>
+            <li><a href="Career Goals.asp">Career Goals</a></li>
+            <li><a href="Interests.asp">Interests</a></li>
+            <li><a href="Contact.asp">Contact</a></li>
+        </ul>
+    </nav>
 
-	<!-- Main Content Section -->
-	<!-- Give a brief introduction for the website -->
-	<main>
-		<div class="secondary-content">
-			<!-- Additional content or less essential content -->
-			<p>
-				Welcome and Thank You for visiting my Portfolio!<br>
-				Please feel free to explore and learn more about me and my professional aspirations.
-			</p>
-			<p>
-				<b> Cheers,</b><br>
-				<i> -Kai </i>
-			</p>
-		</div>
-	</main>
+    <!-- Main Content Section -->
+    <!-- Give a brief introduction for the website -->
+    <main>
+        <div class="secondary-content">
+            <!-- Additional content or less essential content -->
+            <p>
+                Welcome and Thank You for visiting my Portfolio!<br>
+                Please feel free to explore and learn more about me and my professional aspirations.
+            </p>
+            <p>
+                <b>Cheers,</b><br>
+                <i>-Kai</i>
+            </p>
+        </div>
+    </main>
 
-	<footer>
-		<p>©2023 MyWebsite. All rights reserved. <br> Contact Email: <a href="mailto:ke.thunberg@pack.csupueblo.edu">ke.thunberg@pack.csupueblo.edu</a></p>
-	</footer>
+    <footer>
+        <p>©2023 MyWebsite. All rights reserved. <br> Contact Email: <a href="mailto:ke.thunberg@pack.csupueblo.edu">ke.thunberg@pack.csupueblo.edu</a></p>
+    </footer>
 </body>
 
 </html>
