audio welcome added

--- a/Portfolio/Homepage.html
+++ b/Portfolio/Homepage.html
@@ -55,6 +55,11 @@
                 <img src="images/kaithunberg.jpg" alt="Kai Thunberg" height="480" width="360">
                 <figcaption>Making the web simpler, one site at a time.</figcaption>
             </figure>
+            <!-- Add the audio element -->
+            <audio controls autoplay>
+                <source src="media/Recording.mp3" type="audio/mp3">
+                Your browser does not support the audio element.
+            </audio>
         </div>
     </header>
 
