--- a/Portfolio/Career Goals.html
+++ b/Portfolio/Career Goals.html
@@ -15,7 +15,7 @@
     <!-- External stylesheets for desktop and mobile devices -->
     <link rel="stylesheet" href="css/stylesheet.css">
     <link rel="stylesheet" href="css/mobiledevice-stylesheet.css">
-
+    <meta name="description" content="Show Aspiration and Goals."
     <!-- Internal styles for additional table styling -->
     <style>
         /* Additional styling for the table */
