--- a/Portfolio/Contact.html
+++ b/Portfolio/Contact.html
@@ -10,7 +10,8 @@
 <head>
     <!-- Meta tags for character set and viewport -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--<meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+    <meta name="description" content="Provide users with the easiest, as well as multiple ways to get a hold of me.">
     <title>Contact Page</title>
     
     <!-- Stylesheets for desktop and mobile devices -->
@@ -45,8 +46,8 @@
     <!-- Header Section -->
     <!-- Introduce the Viewer to the subject of the website -->
     <header>
-        <h1>Kai Thunberg</h1>
-        <h2>Simple Solutions for Simple Web Sites</h2>
+        <h1>Contact Page</h1>
+        
     </header>
 
     <!-- Navigation Section -->
