--- a/Portfolio/Homepage.html
+++ b/Portfolio/Homepage.html
@@ -9,7 +9,8 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+    <meta name="description" content="Set strong 1st impression, and let guide viewer through webpages. Also provide friendly Welcome.">
     <title>Portfolio</title>
     <!-- Link to the Google Font -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap">
